fix: input placeholder and icon contrast

--- a/src/components/input/d-input.css
+++ b/src/components/input/d-input.css
@@ -7,6 +7,7 @@
   --border-color: var(--stroke);
   --color: var(--on);
   --placeholder-color: var(--on-alt);
+  --placeholder-opacity: 1;
   --highlight-color-focused: var(--accent);
   --highlight-color-invalid: var(--error);
   --highlight-color-valid: var(--success);
